--- a/app/src/main/res/layout/activity_barrasuperior.xml
+++ b/app/src/main/res/layout/activity_barrasuperior.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/cerrarsesion"
-        android:background="@color/color_acento"
+        android:backgroundTint="@color/color_acento"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
