--- a/app/src/main/res/layout/activity_barrasuperior.xml
+++ b/app/src/main/res/layout/activity_barrasuperior.xml
@@ -5,7 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="75dp"
-    android:background="@color/color_primario"
     tools:context=".BarrasuperiorActivity">
 
     <ImageView
@@ -13,16 +12,23 @@
         android:layout_width="73dp"
         android:layout_height="73dp"
         android:layout_marginStart="10dp"
+        android:src = "@drawable/logo_registro_escolar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <Button
+
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btncerrarsesion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/cerrarsesion"
-        android:backgroundTint="@color/color_acento"
+        android:textColor="?attr/colorSurface"
+        android:backgroundTint="?attr/colorOnSurface"
+        app:cornerRadius="12dp"
+        app:strokeWidth="2dp"
+        app:strokeColor="?attr/colorOnSurface"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
