--- a/app/src/main/res/layout/activity_ver_registros.xml
+++ b/app/src/main/res/layout/activity_ver_registros.xml
@@ -1,28 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/main"
+    android:orientation="vertical"
     tools:context=".VerRegistrosActivity">
 
+    <!-- Barra Superior -->
     <include
         android:id="@+id/barra_superior"
         layout="@layout/activity_barrasuperior"
         android:layout_width="match_parent"
         android:layout_height="75dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        />
 
-    <ScrollView
-        android:layout_width="0dp"
+    <FrameLayout
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/barra_superior"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:layout_weight="1">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/registros_Pantalla_titulo"
+        android:textSize="28sp"
+        android:gravity="center"
+        android:textColor="?attr/colorOnSurface"
+        android:textStyle="bold"
+        />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:text = "que tengo a mi cargo"
+            android:textSize="16sp"
+            android:gravity="center"
+            android:textColor="?attr/colorOnSurface"
+            android:textStyle="bold"
+            />
+    <LinearLayout
+        android:id = "@+id/layout_no_registros"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:padding="8dp"
+        android:visibility="gone"
+        >
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="298dp"
+            android:layout_height="261dp"
+            app:srcCompat="@drawable/signsremovedbg" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/no_registros_Pantalla_titulo"
+            android:textSize="18sp"
+            android:gravity="center"
+            android:textColor="?attr/colorOnSurface"
+            />
+    </LinearLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp">
 
         <LinearLayout
             android:id="@+id/llRegistros"
@@ -31,22 +81,21 @@
             android:orientation="vertical"
             android:padding="8dp">
 
+            <!-- Aquí irán los registros -->
+
         </LinearLayout>
 
     </ScrollView>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/agregarregistros"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|start"
+            android:layout_margin="16dp"
+            android:backgroundTint="@color/black"
+            app:tint="@color/white"
+            app:srcCompat="@drawable/add_item" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/agregarregistros"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:layout_margin="16dp"
-        android:text="Agregar registros"
-        android:textSize="24sp"
-        android:textColor="@color/color_texto_iconos"
-        android:backgroundTint="@color/color_acento"
-        android:contentDescription="Ver Registros"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+    </FrameLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
